--- a/githubrepo/Complete-Python-3-Bootcamp-master/Complete-Python-3-Bootcamp-master/08-Milestone Project - 2/02-Milestone Project 2 - Walkthrough Steps Workbook.ipynb
+++ b/githubrepo/Complete-Python-3-Bootcamp-master/Complete-Python-3-Bootcamp-master/08-Milestone Project - 2/02-Milestone Project 2 - Walkthrough Steps Workbook.ipynb
@@ -54,15 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
-    "suits = pass\n",
-    "ranks = pass\n",
-    "values = pass\n",
+    "suits = ('Hearts', 'Diamonds', 'Spades', 'Clubs')\n",
+    "ranks = ('Two', 'Three', 'Four', 'Five', 'Six', 'Seven', 'Eight', 'Nine', 'Ten', 'Jack', 'Queen', 'King', 'Ace')\n",
+    "values = {'Two':2, 'Three':3, 'Four':4, 'Five':5, 'Six':6, 'Seven':7, 'Eight':8, 'Nine':9, 'Ten':10, 'Jack':10,\n",
+    "         'Queen':10, 'King':10, 'Ace':11}\n",
     "\n",
     "playing = True"
    ]
@@ -85,17 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Card:\n",
     "    \n",
-    "    def __init__(self):\n",
-    "        pass\n",
+    "    def __init__(self, suit, rank):\n",
+    "        self.suit = suit\n",
+    "        self.rank = rank\n",
     "    \n",
     "    def __str__(self):\n",
-    "        pass"
+    "        print('{} of {}').format(self.rank, self.suit)"
    ]
   },
   {
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,16 +126,19 @@
     "        self.deck = []  # start with an empty list\n",
     "        for suit in suits:\n",
     "            for rank in ranks:\n",
-    "                pass\n",
+    "                self.deck.append(Card(suit, rank))\n",
     "    \n",
     "    def __str__(self):\n",
-    "        pass\n",
+    "        cards = ''  # start with an empty string\n",
+    "        for card in self.deck:\n",
+    "            cards += '\\n '+card.__str__() # add each Card object's print string\n",
+    "        return 'The deck has: \\n' + cards\n",
     "\n",
     "    def shuffle(self):\n",
     "        random.shuffle(self.deck)\n",
     "        \n",
     "    def deal(self):\n",
-    "        pass"
+    "        return self.deck.pop()"
    ]
   },
   {
@@ -145,9 +150,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{} of {}\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'format'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-18-1bfc314b8e70>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mtest_deck\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDeck\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_deck\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-17-1988e94418e8>\u001b[0m in \u001b[0;36m__str__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[0mcards\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m''\u001b[0m  \u001b[1;31m# start with an empty string\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mcard\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdeck\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m             \u001b[0mcards\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;34m'\\n '\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mcard\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__str__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# add each Card object's print string\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[1;34m'The deck has: \\n'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mcards\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-12-3f3f1ec7003b>\u001b[0m in \u001b[0;36m__str__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__str__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'{} of {}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrank\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msuit\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'format'"
+     ]
+    }
+   ],
    "source": [
     "test_deck = Deck()\n",
     "print(test_deck)"
@@ -181,10 +207,15 @@
     "        self.aces = 0    # add an attribute to keep track of aces\n",
     "    \n",
     "    def add_card(self,card):\n",
-    "        pass\n",
-    "    \n",
+    "        self.cards.append(card)\n",
+    "        self.value = self.value + card.rank\n",
+    "        if card.rank == 'Ace':\n",
+    "            self.aces += 1  # add to self.aces\n",
+    "            \n",
     "    def adjust_for_ace(self):\n",
-    "        pass"
+    "        while self.value > 21 and self.aces:\n",
+    "            self.value = self.value - 10\n",
+    "            self.aces = self.aces - 1 "
    ]
   },
   {
@@ -208,10 +239,10 @@
     "        self.bet = 0\n",
     "        \n",
     "    def win_bet(self):\n",
-    "        pass\n",
+    "        self.total = self.total + self.bet\n",
     "    \n",
     "    def lose_bet(self):\n",
-    "        pass"
+    "        self.total = self.total - self.bet"
    ]
   },
   {
@@ -237,8 +268,16 @@
    "outputs": [],
    "source": [
     "def take_bet():\n",
-    "    \n",
-    "    pass"
+    "    while True:\n",
+    "        try:\n",
+    "            chips.bet = int(raw_input('How many chips do you want to bet? '))\n",
+    "        except TypeError:\n",
+    "            print('A bet must be an integer!')\n",
+    "        else:\n",
+    "            if chips.bet > chips.total:\n",
+    "                print(\"Sorry, your bet can't exceed\",chips.total)\n",
+    "            else:\n",
+    "                break"
    ]
   },
   {
@@ -257,7 +296,8 @@
    "source": [
     "def hit(deck,hand):\n",
     "    \n",
-    "    pass"
+    "    hand.add_card(deck.deal())\n",
+    "    hand.adjust_for_ace()"
    ]
   },
   {
@@ -278,7 +318,20 @@
     "def hit_or_stand(deck,hand):\n",
     "    global playing  # to control an upcoming while loop\n",
     "    \n",
-    "    pass"
+    "    while True:\n",
+    "        x = input(\"Would you like to Hit or Stand? Enter 'h' or 's' \")\n",
+    "        \n",
+    "        if x[0].lower() == 'h':\n",
+    "            hit(deck,hand)  # hit() function defined above\n",
+    "\n",
+    "        elif x[0].lower() == 's':\n",
+    "            print(\"Player stands. Dealer is playing.\")\n",
+    "            playing = False\n",
+    "\n",
+    "        else:\n",
+    "            print(\"Sorry, please try again.\")\n",
+    "            continue\n",
+    "        break"
    ]
   },
   {
@@ -296,12 +349,16 @@
    "outputs": [],
    "source": [
     "def show_some(player,dealer):\n",
-    "    \n",
-    "    pass\n",
+    "    print(\"\\nDealer's Hand:\")\n",
+    "    print(\" <card hidden>\")\n",
+    "    print('',dealer.cards[1])  \n",
+    "    print(\"\\nPlayer's Hand:\", *player.cards, sep='\\n ')\n",
     "    \n",
     "def show_all(player,dealer):\n",
-    "    \n",
-    "    pass"
+    "    print(\"\\nDealer's Hand:\", *dealer.cards, sep='\\n ')\n",
+    "    print(\"Dealer's Hand =\",dealer.value)\n",
+    "    print(\"\\nPlayer's Hand:\", *player.cards, sep='\\n ')\n",
+    "    print(\"Player's Hand =\",player.value)"
    ]
   },
   {
@@ -318,20 +375,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def player_busts():\n",
-    "    pass\n",
+    "def player_busts(player,dealer,chips):\n",
+    "    print(\"Player busts!\")\n",
+    "    chips.lose_bet()\n",
     "\n",
-    "def player_wins():\n",
-    "    pass\n",
+    "def player_wins(player,dealer,chips):\n",
+    "    print(\"Player wins!\")\n",
+    "    chips.win_bet()\n",
     "\n",
-    "def dealer_busts():\n",
-    "    pass\n",
+    "def dealer_busts(player,dealer,chips):\n",
+    "    print(\"Dealer busts!\")\n",
+    "    chips.win_bet()\n",
     "    \n",
-    "def dealer_wins():\n",
-    "    pass\n",
+    "def dealer_wins(player,dealer,chips):\n",
+    "    print(\"Dealer wins!\")\n",
+    "    chips.lose_bet()\n",
     "    \n",
-    "def push():\n",
-    "    pass"
+    "def push(player,dealer):\n",
+    "    print(\"Dealer and Player tie! It's a push.\")"
    ]
   },
   {
@@ -417,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
